@@ -1,5 +1,7 @@
 2007-12-09  Andreas Kirschbaum
 
+	* Add "container close" button when a container is open.
+
 	* Implement 'label_multi' skin command that display a multi-line
 	label.
 
